day 5 filtered the data on UI

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
 
     <div id="root">
-        <h1>hitesh is here</h1>
+        <h1>Not Rendered</h1>
     </div>
 
     
-    <script src="./app.js" type="module">
+    <script src="./src/app.js" type="module">
        
     </script>
 
